# proxmox_inventory

./: .gitignore  Changelog.md  README.md  pyproject.toml
.github/workflows/: audit.yml  ci.yml  release.yml
pxinv/: __init__.py  cli.py  client.py  config.py  output.py
pxinv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_pxinv.py
